--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=IotLink <devel@iotlink.io>
 sentence=IotLink library for the ESP8266
 paragraph=Library to manage data with the IotLink cloud using ESP8266 based systems
 category=Other
-url=https://github.com/iotlink/iotlink-esp8266-esp32
+url=https://github.com/rajenpal033/zaphome
 architectures=*
